[tool.poetry]
name = "tutorials"
version = "0.1.0"
description = ""
authors = ["VLTSankalpa <wltsankalpa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11"
langchain = "^0.3.15"
langchain-core = "^0.3.31"
langchain-community = "^0.3.15"
jupyter = "^1.1.1"
ipykernel = "^6.29.5"
pypdf = "^5.1.0"
langchain-openai = "^0.3.2"
python-dotenv = "^1.0.1"
langchain-milvus = "^0.1.8"
langchain-chroma = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
